# wasm-trial

./: README.md
greet/: Cargo.toml
greet-user/: Cargo.toml
greet-user-wit/: Cargo.toml
greet-user-wit/src/: main.rs
greet-user/src/: main.rs
greet/src/: bindings.rs  lib.rs
greet/wit/: world.wit
hello-wasi-cli/: Cargo.toml
hello-wasi-cli/src/: main.rs
my-grep/: Cargo.toml
my-grep/src/: main.rs
