[package]
name = "my-grep"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "component:my-grep"

[package.metadata.component.dependencies]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
